# base_gdextension

./: .gitignore  .project  README.md
code/: .project  CMakeLists.txt
code/include/: register_types.h
code/src/: example.h  register_types.cpp
code/src/gdextension/: AutoRegister.hpp  Register.hpp  Register_types.cpp  Register_types.h
code/src/unused/: example2.cpp  example2.h
godot/: example.gdextension  icon.png.import  library.gdextension  main.tscn  project.godot
lib/: CMakeLists.txt
native/code/: CMakeLists.txt
native/code/src/: example.h
native/code/src/gdextension/: AutoRegister.hpp  Register.hpp  Register_types.cpp  Register_types.h
